--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,11 @@ android {
         }
     }
 }
-
+gradle.projectsEvaluated {
+    tasks.withType(JavaCompile) {
+        options.compilerArgs << "-Xmaxerrs" << "500" // or whatever number you want
+    }
+}
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
    /* androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
@@ -61,6 +65,10 @@ dependencies {
     compile 'com.facebook.android:facebook-login:[4,5)'
     compile 'com.google.firebase:firebase-auth:11.4.2'
     compile 'com.google.android.gms:play-services-auth:11.4.2'
+
+    compile 'com.google.dagger:dagger:2.11'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.11'
+
 
 
 }
