--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -83,6 +83,28 @@
 
         </activity>
 
+        <activity
+            android:name=".actvity.Document"
+            android:label="@string/app_name"
+            android:theme="@style/MyMaterialTheme"
+            android:screenOrientation="sensorPortrait">
+
+        </activity>
+        <activity
+            android:name=".actvity.Availability"
+            android:label="@string/app_name"
+            android:theme="@style/MyMaterialTheme"
+            android:screenOrientation="sensorPortrait">
+
+        </activity>
+
+        <activity
+            android:name=".actvity.StripSettings"
+            android:label="@string/app_name"
+            android:theme="@style/MyMaterialTheme"
+            android:screenOrientation="sensorPortrait">
+
+        </activity>
 
         <activity
             android:name=".actvity.myAccount"
