--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "27.0.3"
     defaultConfig {
         applicationId "killbit.taskrabbit.tasker"
-        minSdkVersion 16
+        minSdkVersion 17
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.mobsandgeeks:android-saripaar:2.0.2'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 
+    compile 'com.github.applikeysolutions:cosmocalendar:1.0.4'
 
 
   //  testCompile 'junit:junit:4.12'
